# egg_quality_control

./: .gitignore  CMakeLists (copia).txt  CMakeLists.txt  Características.txt  README.md  egg_quality_control.cxx
